<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brandon.mailbox.Registration"
    android:background="@drawable/background_gradient">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_email"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:layout_below="@+id/username"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:layout_below="@+id/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>
        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/message"
            android:text="@string/continue_"
            android:background="@drawable/button_login"
            android:onClick="login"/>
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/password2"
            android:textColor="@color/colorAccentRed"/>

    </RelativeLayout>
</RelativeLayout>
