<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brandon.mailbox.NewUser"
    android:background="@drawable/background_gradient">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/toolbar">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/first_name"
            android:inputType="textCapSentences"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:layout_below="@+id/firstName"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/firstName"
            android:hint="@string/last_name"
            android:inputType="textCapSentences"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_pic"
            android:layout_below="@+id/lastName"
            android:id="@+id/takePic"
            android:onClick="takePic"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/takePic"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/createUser"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/lastName"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>


</RelativeLayout>
