<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brandon.mailbox.Authentication"
    android:background="@drawable/background_gradient">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:src="@drawable/mailtextlong"
            android:layout_alignParentTop="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/main"
            android:id="@+id/username_wrap"
            android:padding="5dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/username_wrap"
            android:id="@+id/password_wrap"
            android:padding="5dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_password" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password_wrap"
            android:text="@string/action_sign_in_short"
            android:textColor="#ffffff"
            android:background="@drawable/button_login"
            android:onClick="login"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/register"
            android:id="@+id/registration"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="register"
            android:background="#00000000"/>

    </RelativeLayout>

</RelativeLayout>
